--- a/style.css
+++ b/style.css
@@ -43,11 +43,27 @@ body{
 .main_nav{
     display: flex;    
 }
-
+ 
 .main_links{
     display: none;
 }
 
 .main_logo{
     margin: 0 auto;
+}
+
+.main_controls{
+    grid-area: main;
+    align-self: end;
+    justify-self: end;
+    background-color: var(--black);
+    width: 100px;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.main_control{
+    height: 40%;
 }
