--- a/style.css
+++ b/style.css
@@ -88,6 +88,15 @@ body{
     letter-spacing: 4px;
 }
 
+.main_content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .main_arrow{
     margin-left: 20px;
 }
