--- a/style.css
+++ b/style.css
@@ -100,3 +100,12 @@ body{
 .main_arrow{
     margin-left: 20px;
 }
+
+.main_bg{
+    grid-area: image1;
+    min-height: 250px;
+    height: 100%;
+    background-image: url(src/image-about-dark.jpg);
+    background-size: cover;
+    background-position: center;
+}
