--- a/style.css
+++ b/style.css
@@ -41,12 +41,41 @@ body{
 }
 
 .main_nav{
-    display: flex;    
+    display: flex; 
+    flex-wrap: wrap;
+    flex-direction: column;   
 }
- 
+
+.icon_container{
+    display: flex;
+    flex-direction: row;
+}
+
 .main_links{
     display: none;
 }
+
+.main_links_show{
+    padding:1rem 0rem;
+    display: flex;
+    /* min-width: 80%; */
+    justify-content: space-between;
+   /*  display: grid;
+    grid-auto-flow: column;
+    gap: 1em;
+    margin-left: 10%; */
+}
+
+.main_list{
+    list-style: none;
+}
+
+.main_link{
+    color:var(--white);
+    text-decoration: none;
+
+}
+
 
 .main_logo{
     margin: 0 auto;
@@ -148,6 +177,10 @@ body{
 
     .main_logo{
         margin: 0%;
+    }
+
+    .main_nav{
+        flex-direction: row;
     }
 
     .main_hamburger{
